syntax = "proto3";

package wice;
option go_package = "riasc.eu/wice/pkg/pb";

import "common.proto";
import "signaling.proto";

message Event {
    enum Type {
        UNKNOWN = 0;
        
        // Signaling Events
        BACKEND_READY = 10;
        SIGNALING_MESSAGE = 11;

        // Core Events
        PEER_ADDED = 20;
        PEER_REMOVED = 21;
        PEER_MODIFIED = 22;

        INTERFACE_ADDED = 30;
        INTERFACE_REMOVED = 31;
        INTERFACE_MODIFIED = 32;

        // ICE Events
        PEER_CONNECTION_STATE_CHANGED = 40;

        // Signaling Events
        SIGNALING_MESSAGE = 50;
    }

    Type type = 1;
    Timestamp time = 2;

    // Public key of peer which triggerd the event
    bytes peer = 3;

    // Interface name which triggered the event
    string interface = 4;

    oneof event {
        BackendReadyEvent backend_ready = 100;

        PeerConnectionStateChangeEvent peer_connection_state_change = 121;
        PeerModifiedEvent peer_modified = 122;
        InterfaceModifiedEvent interface_modified = 123;
    }
}

message PeerModifiedEvent {
    uint32 modified = 1;   
}

message InterfaceModifiedEvent {
    uint32 modified = 1;
}

message PeerConnectionStateChangeEvent {
    ConnectionState new_state = 3;
}

message BackendReadyEvent {
    BackendType type = 1;

    string id = 2;
    repeated string listen_addresses = 3;
}
